# TUI3

./: .gitignore  .gitmodules  BAK_runtuiWithLog.py  README.md  compareChecks.py  genLoadStdModules.py  makeTCCAxisStatusMasks.py  pyproject.toml  releaseNewVersion.py  runtui.py  runtuiWithLog.py  setup.py
BuildForMac/: TUI.icns  setup.py
BuildForWindows/: setup.py
RO/: AddCallback.py  CanvasUtil.py  CnvUtil.py  CoordSys.py  DS9.py  InputCont.py  KeyDispatcher.py  KeyVariable.py  MathUtil.py  PVT.py  SQLUtil.py  ScriptRunner.py  StringUtil.py  TkUtil.py  procFiles.py
RO/Alg/: IDGen.py  MultiDict.py  OrderedDict.py  SavedDict.py
RO/Comm/: BaseSocket.py  FTPGet.py  Generic.py  HTTPGet.py  HubConnection.py  TCPConnection.py  TkSerial.py  TkSocket.py  TwistedSocket.py
RO/OS/: OSUtil.py  getDirs.py  getLinuxDirs.py  getMacDirs.py  getWinDirs.py
RO/ParseMsg/: GetHeader.py  GetKeyword.py  GetString.py  GetValues.py  ParseData.py
RO/Prefs/: PrefEditor.py  PrefVar.py  PrefWdg.py
RO/Wdg/: ChangedIndicator.py  Checkbutton.py  CtxMenu.py  DropletRunner.py  Entry.py  FTPLogWdg.py  GrayImageDispWdg.py  Gridder.py  HTTPGetWdg.py  HistoryMenu.py  InputDialog.py  Label.py  Menubutton.py  OptionButtons.py  OptionMenu.py  OptionPanelControl.py  PathWdg.py  ProgressBar.py  PythonWdg.py  RadiobuttonSet.py  ResizableRect.py  ScriptWdg.py  ScrolledWdg.py  SeverityMixin.py  Sound.py  StateTracker.py  (+5 more)
TUI/: BackgroundTasks.py  LoadStdModules.py  LogSource.py  Main.py  MenuBar.py  PlaySound.py  ScriptMenu.py  TUIModel.py  TUIPaths.py  TUIPrefs.py  Version.py  WindowModuleUtil.py
(+233 files in other folders)
